--- a/docker-compose-ci.yml
+++ b/docker-compose-ci.yml
@@ -7,7 +7,7 @@ services:
     image: postgres:15.2
     # Задание переменных окружения для контейнера с postgres
     ports:
-      - "5433:5432"
+      - "5432:5432"
     environment:
       POSTGRES_DB: ${DB_NAME}
       POSTGRES_USER: ${DB_USER}
@@ -25,8 +25,8 @@ services:
       retries: 15
 
   api:
-    build: .
-#    image: dshchepetkov/todolist:${GITHUB_REF_NAME}-${GITHUB_RUN_ID}
+#    build: .
+    image: dshchepetkov/todolist:${GITHUB_REF_NAME}-${GITHUB_RUN_ID}
     container_name: api
     command: gunicorn todolist.wsgi:application --bind 0.0.0.0:8000
     #env_file: .env.prod
@@ -51,8 +51,8 @@ services:
 
 
   bot:
-    build: .
-#    image: dshchepetkov/todolist:${GITHUB_REF_NAME}-${GITHUB_RUN_ID}
+#    build: .
+    image: dshchepetkov/todolist:${GITHUB_REF_NAME}-${GITHUB_RUN_ID}
     container_name: bot
     restart: always
     environment:
@@ -72,14 +72,14 @@ services:
     container_name: frontend
     restart: always
     ports:
-      - "88:80"
+      - "80:80"
     depends_on:
       api:
         condition: service_started
 
   migration:
-    build: .
-#    image: dshchepetkov/todolist:${GITHUB_REF_NAME}-${GITHUB_RUN_ID}
+#    build: .
+    image: dshchepetkov/todolist:${GITHUB_REF_NAME}-${GITHUB_RUN_ID}
     container_name: migration
     restart: no
     environment:
